# fruitdrop

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/shaders/: custom_material.wgsl
src/: ball.rs  camera.rs  dropper.rs  fps_display.rs  game_board.rs  game_state.rs  gameover.rs  handle_input.rs  ingame_ui.rs  loserbox.rs  main.rs  material_color_animation.rs  mygui.rs  ondeck.rs  pause.rs  physics.rs  score.rs  walls.rs
src/ball/: bundles.rs  components.rs  materials.rs  mod.rs  plugin.rs  resources.rs  systems.rs  utils.rs
src/bundles/: ball.rs
src/dropper/: components.rs  mod.rs  plugin.rs  resources.rs
src/menu/: bundles.rs  components.rs  mod.rs  my_colors.rs  navigation_button_plugin.rs  selector_plugin.rs  slider_plugin.rs  systems.rs  toggle_plugin.rs
src/menu/navigation_button_plugin/: bundles.rs  mod.rs  systems.rs
src/menu/selector_plugin/: bundles.rs  mod.rs  systems.rs
src/menu/slider_plugin/: bundles.rs  mod.rs  systems.rs
src/menu/toggle_plugin/: bundles.rs  mod.rs  systems.rs
src/menus/: main_menu.rs  mod.rs  pause_menu.rs
src/menus/main_menu/: game_menu.rs  initial_menu.rs  menu_state.rs  mod.rs  options_menu.rs  start_menu.rs  video_menu.rs
src/menus/main_menu/game_menu/: mod.rs  systems.rs
src/menus/main_menu/initial_menu/: components.rs  mod.rs  systems.rs
src/menus/main_menu/options_menu/: mod.rs  systems.rs
src/menus/main_menu/video_menu/: mod.rs  systems.rs
src/menus/pause_menu/: initial_menu.rs  menu_state.rs  mod.rs
src/menus/pause_menu/initial_menu/: components.rs  mod.rs  systems.rs
