[package]
name = "fruitdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.23"
bevy_egui = "0.26"
#bevy_rapier2d = {version = "0.23.0", features = ["debug-render-2d"] }
bevy_xpbd_2d = { version = "0.4", features = ["debug-plugin", "2d"] }
leafwing-input-manager = "0.13"
noisy_bevy = "0.6"
web-sys = { version = "0.3.67", features = ["Window"] }
# bevy_xpbd_2d = {version = "0.3.2", features = ["debug-plugin", "2d"]}
#bevy_rapier2d = {version = "0.23.0", features = ["simd-stable", "debug-render-2d"] }
rand = "0.8.5"

[target.'cfg(wasm)'.dependencies]
web-sys = "0.3.67"

[profile.release]
opt-level = 'z'
