[package]
name = "fruitdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
nalgebra="^0.26"
#bevy= { git = "https://github.com/bevyengine/bevy"}
bevy = "^0.14"
#bevy_ecs = {version = "^0.14.0-rc.2", features=["serve"}
#bevy-inspector-egui = "0.23"
bevy_egui = "0.28" 
avian2d = "0.1"
#leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", branch = "v0.14-rc" }
leafwing-input-manager = "0.14"
#noisy_bevy = "0.6"
web-sys = { version = "0.3.67", features = ["Window"] }
rand = "0.8.5"

[target.'cfg(wasm)'.dependencies]
web-sys = "0.3.67"

[profile.release]
opt-level = 'z'
