[package]
name = "fruitdrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
#nalgebra="^0.26"
#bevy= { git = "https://github.com/bevyengine/bevy"}
bevy = {version="^0.16", features=["track_location"]}
#bevy_ecs = {version = "^0.14.0-rc.2", features=["serve"}
bevy-inspector-egui = "^0.31"
#bevy_egui = "0.28" 
avian2d = { version = "^0.3"}
#avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager", branch = "main" }
#leafwing-input-manager = "0.16"
#noisy_bevy = "0.6"
web-sys = { version = "0.3.67", features = ["Window"] }
rand = "0.8.5"

[target.'cfg(wasm)'.dependencies]
web-sys = "0.3.67"

[profile.release]
opt-level = 'z'
